fix: fixed gap in <div/skills>

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ select:hover,
 .skills {
     display: flex;
     flex-direction: column;
-    gap: normal;
+    gap: 20px;
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
